--- a/package.json
+++ b/package.json
@@ -15,5 +15,20 @@
   "bugs": {
     "url": "https://github.com/lingharto/quasar-auth/issues"
   },
-  "homepage": "https://github.com/lingharto/quasar-auth#readme"
+  "homepage": "https://github.com/lingharto/quasar-auth#readme",
+  "dependencies": {
+    "axios": "^0.18.0",
+    "browser-cookies": "^1.2.0",
+    "deepmerge": "^3.2.0",
+    "eventemitter2": "^5.0.1",
+    "jwt-decode": "^2.2.0",
+    "vuex": "^3.1.1"
+  },
+  "devDependencies": {
+    "@vue/eslint-config-standard": "^4.0.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.10.0",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-vue": "^5.0.0"
+  }
 }
